--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -45,11 +45,14 @@
             android:name="com.dayzeeco.dayzee.view.loginFlow.Signup"
             android:label="Signup">
             <action
-                android:id="@+id/action_signup_to_preferenceCategory"
-                app:destination="@id/preferenceCategory" />
-            <action
                 android:id="@+id/action_signup_to_changePassword2"
                 app:destination="@id/changePassword2" />
+            <action
+                android:id="@+id/action_signup_to_createAccount"
+                app:destination="@id/createAccount" />
+            <action
+                android:id="@+id/action_signup_to_seConnecter"
+                app:destination="@id/seConnecter" />
         </fragment>
         <fragment
             android:id="@+id/changePassword2"
@@ -59,6 +62,18 @@
                 android:name="token"
                 app:argType="string" />
         </fragment>
+        <fragment
+            android:id="@+id/createAccount"
+            android:name="com.dayzeeco.dayzee.view.loginFlow.CreateAccount"
+            android:label="CreateAccount" >
+            <action
+                android:id="@+id/action_createAccount_to_preferenceCategory4"
+                app:destination="@id/preferenceCategory" />
+        </fragment>
+        <fragment
+            android:id="@+id/seConnecter"
+            android:name="com.dayzeeco.dayzee.view.loginFlow.SeConnecter"
+            android:label="SeConnecter" />
     </navigation>
     <fragment
         android:id="@+id/profilModify"
@@ -133,9 +148,6 @@
             android:id="@+id/action_menu_to_settings"
             app:destination="@id/settings" />
         <action
-            android:id="@+id/action_menu_to_contacts"
-            app:destination="@id/contacts" />
-        <action
             android:id="@+id/action_menu_to_preferenceCategory"
             app:destination="@id/preferenceCategory" />
     </fragment>
@@ -199,10 +211,6 @@
             app:argType="integer"
             android:defaultValue="4" />
     </fragment>
-    <fragment
-        android:id="@+id/contacts"
-        android:name="com.dayzeeco.dayzee.view.profileFlow.menuDirectory.Contacts"
-        android:label="Contacts" />
     <fragment
         android:id="@+id/detailedTimenote"
         android:name="com.dayzeeco.dayzee.view.homeFlow.DetailedTimenote"
