--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,6 +15,7 @@
     <attr name="colorBackgroundSettings" format="reference|color"/>
     <attr name="colorElevated" format="reference|color"/>
     <attr name="colorHashtag" format="reference|color"/>
+    <attr name="colorBackgroundlogin" format="reference|color"/>
 
     <declare-styleable name="ExpandIconView">
         <attr name="eiv_roundedCorners" format="boolean"/>
