--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -47,11 +47,14 @@
             android:name="com.dayzeeco.dayzee.view.loginFlow.Signup"
             android:label="Signup">
             <action
-                android:id="@+id/action_signup_to_preferenceCategory"
-                app:destination="@id/preferenceCategory" />
-            <action
                 android:id="@+id/action_signup_to_changePassword2"
                 app:destination="@id/changePassword2" />
+            <action
+                android:id="@+id/action_signup_to_createAccount"
+                app:destination="@id/createAccount" />
+            <action
+                android:id="@+id/action_signup_to_seConnecter"
+                app:destination="@id/seConnecter" />
         </fragment>
         <fragment
             android:id="@+id/changePassword2"
@@ -59,6 +62,18 @@
             android:label="ChangePassword" >
             <argument android:name="token" />
         </fragment>
+        <fragment
+            android:id="@+id/createAccount"
+            android:name="com.dayzeeco.dayzee.view.loginFlow.CreateAccount"
+            android:label="CreateAccount" >
+            <action
+                android:id="@+id/action_createAccount_to_preferenceCategory5"
+                app:destination="@id/preferenceCategory" />
+        </fragment>
+        <fragment
+            android:id="@+id/seConnecter"
+            android:name="com.dayzeeco.dayzee.view.loginFlow.SeConnecter"
+            android:label="SeConnecter" />
     </navigation>
     <fragment
         android:id="@+id/search"
