--- a/app/src/main/res/layout/fragment_new_password.xml
+++ b/app/src/main/res/layout/fragment_new_password.xml
@@ -1,144 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackground"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBackground">
 
     <ImageView
-        android:src="@drawable/audiance"
-        android:scaleType="centerCrop"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <ImageView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/dayzee"
-        android:layout_marginTop="24dp"
-        android:id="@+id/logo_dayzee"
-        android:paddingHorizontal="48dp"
+        android:id="@+id/logo_dayzee_new"
         android:layout_width="wrap_content"
-        android:layout_height="120dp"/>
-
-    <androidx.cardview.widget.CardView
-        app:cardElevation="0dp"
-        android:id="@+id/signup_cv"
-        app:cardBackgroundColor="#60000000"
-        app:cardCornerRadius="10dp"
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="90dp"
+        android:paddingHorizontal="48dp"
+        android:src="@drawable/dayzee"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@+id/new_password"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="@android:color/transparent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <EditText
+        android:id="@+id/new_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:paddingVertical="10dp"
+        android:textSize="14sp"
+        android:textColorHint="#757575"
+        android:hint="@string/new_password"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@+id/new_password_again"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginVertical="16dp"
+        android:textColor="@android:color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo_dayzee_new"
+        android:background="@drawable/edit_text_bg"
+        />
 
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:background="@android:color/transparent"
-                android:text="@string/change_password"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:id="@+id/signup_status"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+    <EditText
+        android:inputType="textPassword"
+        android:id="@+id/new_password_again"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:paddingVertical="10dp"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:hint="@string/new_password_again"
+        android:textColorHint="#757575"
+        android:layout_marginBottom="48dp"
+        android:background="@drawable/edit_text_bg"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@+id/confirm_new_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_password" />
 
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:layout_marginTop="24dp"
-                android:layout_marginHorizontal="16dp"
-                android:textSize="14sp"
-                android:text="@string/new_password"
-                android:id="@+id/email_label"
-                android:textColor="@android:color/white"
-                app:layout_constraintTop_toBottomOf="@id/signup_status"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-            <EditText
-                android:fontFamily="sans-serif-light"
-                android:backgroundTint="@android:color/white"
-                android:layout_marginHorizontal="12dp"
-                android:hint="@string/new_password"
-                android:maxLines="1"
-                android:textColorHint="#60FFFFFF"
-                android:id="@+id/new_password"
-                android:textColor="@android:color/white"
-                android:inputType="textPassword"
-                android:textSize="14sp"
-                app:layout_constraintTop_toBottomOf="@id/email_label"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:id="@+id/signup_password_label"
-                android:textSize="14sp"
-                android:textColor="@android:color/white"
-                android:text="@string/new_password_again"
-                android:layout_marginTop="8dp"
-                android:layout_marginHorizontal="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/new_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-            <EditText
-                android:fontFamily="sans-serif-light"
-                android:backgroundTint="@android:color/white"
-                android:layout_marginHorizontal="12dp"
-                android:hint="@string/new_password"
-                android:textSize="14sp"
-                android:inputType="textPassword"
-                android:textColorHint="#60FFFFFF"
-                android:textColor="@android:color/white"
-                android:id="@+id/new_password_again"
-                android:maxLines="1"
-                app:layout_constraintTop_toBottomOf="@id/signup_password_label"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <mehdi.sakout.fancybuttons.FancyButton
-                fancy:fb_defaultColor="@android:color/white"
-                fancy:fb_radius="90dp"
-                fancy:fb_text="@string/validate_login"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/new_password_again"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                fancy:fb_textColor="@android:color/black"
-                android:paddingVertical="6dp"
-                android:paddingHorizontal="36dp"
-                android:layout_marginBottom="16dp"
-                android:layout_gravity="center"
-                android:id="@+id/confirm_new_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </androidx.cardview.widget.CardView>
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/confirm_new_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24dp"
+        android:paddingVertical="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginVertical="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_password_again"
+        fancy:fb_borderColor="@android:color/transparent"
+        fancy:fb_borderWidth="1dp"
+        fancy:fb_defaultColor="@color/colorAccent"
+        fancy:fb_radius="5dp"
+        fancy:fb_text="@string/validate_login"
+        fancy:fb_textColor="@android:color/black"
+        fancy:fb_textSize="14sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
