--- a/app/src/main/res/drawable/edit_text_bg.xml
+++ b/app/src/main/res/drawable/edit_text_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="#FFBDBDBD" />
+        android:color="#EEEEEE" />
     <solid
-        android:color="#FFEEEEEE"
+        android:color="#FAFAFA"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"/>
     <corners android:radius="5dp" />
