--- a/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_detailed_fragment.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.homeFlow.DetailedTimenote">
 
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:id="@+id/detailed_timenote_ll"
             style="@style/AppTheme.Toolbar.LinearLayout"
@@ -23,15 +24,16 @@
                     android:layout_height="match_parent">
 
                     <TextView
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:fontFamily="sans-serif-light"
-                        android:drawableStart="@drawable/ic_back_thin"
                         android:id="@+id/detailed_timenote_btn_back"
-                        android:text="" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_back_thin"
+                        android:fontFamily="sans-serif-light"
+                        android:text=""
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -43,11 +45,11 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
-                            android:background="@drawable/border_pic_profile"
-                            android:padding="0.6dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintBottom_toBottomOf="parent"
+                            android:background="@drawable/border_pic_profile"
+                            android:padding="0.6dp"
                             android:id="@+id/detailed_timenote_pic_user"
                             android:layout_width="36dp"
                             android:layout_height="36dp" />
@@ -91,58 +93,59 @@
 
                     <ImageView
                         android:id="@+id/detailed_timenote_btn_more"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
                         android:src="@drawable/ic_more_vert_black_profile_24dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.appcompat.widget.Toolbar>
 
-            <TextView style="@style/AppTheme.Divider.Toolbar"/>
+            <TextView style="@style/AppTheme.Divider.Toolbar" />
 
         </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
         android:id="@+id/detailed_timenote_scc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <include
+                android:id="@+id/timenote_root"
                 layout="@layout/item_timenote_root"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/timenote_root"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.core.widget.NestedScrollView
-                android:layout_marginBottom="68dp"
                 android:id="@+id/detailed_timenote_sv"
-                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="68dp"
                 android:fillViewport="true"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/timenote_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                app:layout_constraintTop_toBottomOf="@id/timenote_root">
 
                 <androidx.recyclerview.widget.RecyclerView
+                    tools:listitem="@layout/item_comment_pic"
                     android:id="@+id/detailed_timenote_comments_rv"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" />
 
 
             </androidx.core.widget.NestedScrollView>
