--- a/app/src/main/res/layout-sw360dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw360dp/item_timenote.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:paddingBottom="8dp">
+
 
     <ImageView
         android:id="@+id/timenote_pic_user_imageview"
@@ -14,7 +16,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/border_pic_profile"
-        android:padding="0.8dp"
+        android:padding="0.6dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -28,8 +30,8 @@
         android:textColor="@color/colorText"
         android:textSize="15sp"
         android:maxLines="1"
-        app:layout_constraintBottom_toTopOf="@id/timenote_place"
         app:layout_constraintEnd_toStartOf="@id/timenote_options"
+        app:layout_constraintBottom_toTopOf="@id/timenote_place"
         android:ellipsize="end"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
         app:layout_constraintTop_toTopOf="@id/timenote_pic_user_imageview"
@@ -58,16 +60,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:src="@drawable/ic_more_vert_black_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <include
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview"
-        android:layout_height="wrap_content"
+        android:id="@+id/timenote_root"
+        layout="@layout/item_timenote_root"
         android:layout_width="match_parent"
-        layout="@layout/item_timenote_root"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_pic_user_imageview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
