--- a/app/src/main/res/layout-sw480dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw480dp/item_timenote.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="16dp"
     android:background="@color/colorBackground">
 
     <ImageView
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/colorText"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/timenote_place"
         app:layout_constraintEnd_toStartOf="@id/timenote_options"
@@ -46,7 +47,7 @@
         android:fontFamily="sans-serif-light"
         android:maxLines="1"
         android:textColor="@color/colorText"
-        android:textSize="13sp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toStartOf="@id/timenote_options"
         app:layout_constraintBottom_toBottomOf="@id/timenote_pic_user_imageview"
         app:layout_constraintStart_toEndOf="@id/timenote_pic_user_imageview"
