--- a/app/src/main/res/layout-sw480dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw480dp/item_timenote_root.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/timenote_title"
@@ -30,7 +30,7 @@
         android:text="BEACH PARTY"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/timenote_vp" />
 
@@ -48,43 +48,44 @@
         android:id="@+id/timenote_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:gravity="center"
-        android:layout_marginEnd="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        android:text="2020"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_1"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/separator_1" />
 
     <TextView
         android:id="@+id/separator_1"
         android:layout_width="2dp"
         android:layout_height="48dp"
-        android:layout_marginStart="350dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintStart_toStartOf="@id/timenote_vp" />
+        app:layout_constraintEnd_toStartOf="@id/timenote_day_month"
+        app:layout_constraintStart_toEndOf="@id/timenote_year" />
 
     <TextView
         android:id="@+id/timenote_day_month"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        android:text="11 Aug\n15:30"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_1"
@@ -94,95 +95,95 @@
         android:id="@+id/separator_2"
         android:layout_width="2dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="350dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
         app:layout_constraintBottom_toBottomOf="@id/timenote_vp"
-        app:layout_constraintEnd_toEndOf="@id/timenote_vp" />
+        app:layout_constraintEnd_toStartOf="@id/timenote_time"
+        app:layout_constraintStart_toEndOf="@id/timenote_day_month" />
 
     <TextView
         android:id="@+id/timenote_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:gravity="center"
-        android:layout_marginStart="12dp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
-        android:text="12:30"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separator_2"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
 
     <TextView
-        android:visibility="invisible"
         android:id="@+id/timenote_in_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_oval"
+        android:drawablePadding="4dp"
         android:fontFamily="sans-serif-light"
-        android:textSize="16sp"
         android:shadowColor="@android:color/black"
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="1.5"
         android:textColor="@android:color/white"
-        android:drawablePadding="4dp"
-        android:drawableStart="@drawable/ic_oval"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintEnd_toEndOf="@id/timenote_vp"
         app:layout_constraintStart_toStartOf="@id/timenote_vp"
-        app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintTop_toTopOf="@id/separator_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@id/separator_2" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:visibility="gone"
         android:id="@+id/timenote_buy_cl"
-        android:background="@color/colorBackground"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp">
 
         <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/timenote_buy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="end"
-            android:id="@+id/timenote_buy"
-            android:visibility="visible"
             android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
+            android:gravity="end"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
             android:textColor="@color/colorAccent"
-            android:textSize="16sp" />
+            android:textSize="20sp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/more_label"
-            android:text="Find out more"
-            android:textSize="14sp"
-            android:textColor="@color/colorAccent"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Find out more"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            app:layout_constraintTop_toBottomOf="@id/more_label"
-            android:layout_marginTop="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp"
             android:background="@android:color/darker_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="0.1dp"/>
+            app:layout_constraintTop_toBottomOf="@id/more_label" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -232,71 +233,71 @@
         android:id="@+id/timenote_fl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        android:layout_marginStart="12dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timenote_comment">
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_one_rl"
-            android:layout_marginEnd="-8dp"
-            android:background="@drawable/border_iv"
-            android:layout_gravity="center"
             android:layout_width="28dp"
-            android:layout_height="28dp">
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="-8dp"
+            android:background="@drawable/border_iv">
 
             <ImageView
-                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_one"
                 android:layout_width="24dp"
-                android:layout_height="24dp"/>
+                android:layout_height="24dp"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_two_rl"
-            android:layout_marginEnd="-8dp"
-            android:background="@drawable/border_iv"
-            android:layout_gravity="center"
             android:layout_width="28dp"
-            android:layout_height="28dp">
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="-8dp"
+            android:background="@drawable/border_iv">
 
             <ImageView
-                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_two"
                 android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_height="24dp"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
 
         <RelativeLayout
             android:id="@+id/timenote_pic_participant_three_rl"
-            android:background="@drawable/border_iv"
-            android:layout_gravity="center"
             android:layout_width="28dp"
-            android:layout_height="28dp">
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:background="@drawable/border_iv">
 
             <ImageView
-                android:layout_centerInParent="true"
                 android:id="@+id/timenote_pic_participant_three"
                 android:layout_width="24dp"
-                android:layout_height="24dp" />
+                android:layout_height="24dp"
+                android:layout_centerInParent="true" />
 
         </RelativeLayout>
 
 
         <TextView
-            android:layout_marginStart="4dp"
-            android:layout_gravity="center"
             android:id="@+id/timenote_added_by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Joined by Jordan Dahan and Thousands of "
+            android:layout_gravity="center"
+            android:layout_marginStart="4dp"
             android:textColor="@color/colorText"
-            android:textSize="13sp" />
+            android:textSize="15sp"
+            tools:text="Joined by Jordan Dahan and Thousands of " />
 
     </LinearLayout>
 
@@ -309,23 +310,23 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/colorText"
-        android:textSize="13sp"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        app:layout_constraintStart_toStartOf="@id/timenote_comment"
         app:layout_constraintTop_toBottomOf="@id/timenote_fl"
         tools:targetApi="m"
         tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party" />
 
     <TextView
         android:id="@+id/timenote_comment_account"
-        android:textColor="@android:color/darker_gray"
-        android:text="See the 12 comments"
-        android:textSize="13sp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="See the 12 comments"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        app:layout_constraintStart_toStartOf="@id/timenote_comment"
+        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
