--- a/app/src/main/res/layout/item_timenote_root.xml
+++ b/app/src/main/res/layout/item_timenote_root.xml
@@ -70,7 +70,7 @@
             android:id="@+id/separator_1"
             android:layout_width="2dp"
             android:layout_height="48dp"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="140dp"
             android:layout_marginBottom="12dp"
             android:background="@drawable/custom"
             android:fontFamily="sans-serif-light"
@@ -86,7 +86,7 @@
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="1.5"
-            tools:text="11 Aug\n15:30"
+            tools:text="19 févr. \n 19:00"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/separator_2"
@@ -98,7 +98,7 @@
             android:id="@+id/separator_2"
             android:layout_width="2dp"
             android:layout_height="48dp"
-            android:layout_marginEnd="150dp"
+            android:layout_marginEnd="140dp"
             android:layout_marginBottom="12dp"
             android:background="@drawable/custom"
             android:fontFamily="sans-serif-light"
@@ -115,7 +115,7 @@
             android:shadowDx="1"
             android:shadowDy="1"
             android:shadowRadius="1.5"
-            tools:text="12:30"
+            tools:text="19 févr. \n 19:00"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/separator_2"
