--- a/app/src/main/res/drawable/ic_d.xml
+++ b/app/src/main/res/drawable/ic_d.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="200"
-    android:viewportWidth="200" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#8B572A" android:fillType="evenOdd"
+<vector android:height="20dp" android:viewportHeight="200"
+    android:viewportWidth="200" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#8B572A" android:fillType="nonZero"
         android:pathData="M100,100m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
-        android:pathData="M65.218,49C64.097,49.02 63.029,49.483 62.25,50.289C62.242,50.296 62.235,50.304 62.228,50.311C62.209,50.329 62.191,50.348 62.173,50.366C61.256,51.325 60.842,52.658 61.055,53.968L61.055,146.333C61.055,148.668 62.948,150.562 65.284,150.562L89.25,150.562C117.229,150.562 140,127.791 140,99.812C140,71.832 117.229,49.061 89.25,49.061L65.978,49.061C65.727,49.018 65.473,48.998 65.218,49ZM69.513,57.519L89.25,57.519C112.658,57.519 131.542,76.403 131.542,99.812C131.542,123.22 112.658,142.104 89.25,142.104L69.513,142.104L69.513,57.519Z"
+        android:pathData="M66.904,53C65.866,53.018 64.878,53.447 64.157,54.193C64.15,54.2 64.143,54.207 64.136,54.213C64.119,54.23 64.102,54.247 64.085,54.264C63.237,55.152 62.854,56.386 63.051,57.598L63.051,143.086C63.051,145.247 64.803,147 66.965,147L89.146,147C115.042,147 136.118,125.924 136.118,100.028C136.118,74.132 115.042,53.056 89.146,53.056L67.607,53.056C67.375,53.017 67.14,52.998 66.904,53ZM70.879,60.885L89.146,60.885C110.812,60.885 128.289,78.363 128.289,100.028C128.289,121.694 110.812,139.171 89.146,139.171L70.879,139.171L70.879,60.885Z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
