--- a/app/src/main/res/drawable/ic_o.xml
+++ b/app/src/main/res/drawable/ic_o.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="200"
-    android:viewportWidth="200" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#07182B" android:fillType="evenOdd"
+<vector android:height="20dp" android:viewportHeight="200"
+    android:viewportWidth="200" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#07182B" android:fillType="nonZero"
         android:pathData="M100,100m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
-        android:pathData="M99.5,56C77.483,56 60,76.022 60,100.147C60,124.272 77.483,144.294 99.5,144.294C121.517,144.294 139,124.272 139,100.147C139,76.022 121.517,56 99.5,56ZM99.5,62.971C117.264,62.971 132.029,79.359 132.029,100.147C132.029,120.936 117.264,137.324 99.5,137.324C81.736,137.324 66.971,120.936 66.971,100.147C66.971,79.359 81.736,62.971 99.5,62.971Z"
+        android:pathData="M100.053,53C76.613,53 58,74.316 58,100C58,125.684 76.613,147 100.053,147C123.492,147 142.105,125.684 142.105,100C142.105,74.316 123.492,53 100.053,53ZM100.053,60.421C118.964,60.421 134.684,77.868 134.684,100C134.684,122.132 118.964,139.579 100.053,139.579C81.141,139.579 65.421,122.132 65.421,100C65.421,77.868 81.141,60.421 100.053,60.421Z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
