--- a/app/src/main/res/drawable/ic_p.xml
+++ b/app/src/main/res/drawable/ic_p.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="200"
-    android:viewportWidth="200" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#150425" android:fillType="evenOdd"
+<vector android:height="20dp" android:viewportHeight="200"
+    android:viewportWidth="200" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#150425" android:fillType="nonZero"
         android:pathData="M100,100m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
-        android:pathData="M64.938,41C62.212,41 60,43.211 60,45.937L60,154.561C59.976,156.342 60.911,157.998 62.449,158.896C63.987,159.793 65.89,159.793 67.428,158.896C68.966,157.998 69.901,156.342 69.876,154.561L69.876,119.999L99.5,119.999C121.257,119.999 139,102.256 139,80.5C139,58.743 121.257,41 99.5,41L64.938,41ZM69.876,50.875L99.5,50.875C115.92,50.875 129.125,64.08 129.125,80.5C129.125,96.919 115.92,110.124 99.5,110.124L69.876,110.124L69.876,50.875Z"
+        android:pathData="M72.915,53C70.753,53 69,54.753 69,56.914L69,143.03C68.981,144.442 69.722,145.755 70.942,146.466C72.161,147.178 73.669,147.178 74.888,146.466C76.108,145.755 76.849,144.442 76.829,143.03L76.829,115.63L100.315,115.63C117.564,115.63 131.63,101.563 131.63,84.315C131.63,67.066 117.564,53 100.315,53L72.915,53ZM76.829,60.829L100.315,60.829C113.333,60.829 123.801,71.297 123.801,84.315C123.801,97.332 113.333,107.801 100.315,107.801L76.829,107.801L76.829,60.829Z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
