--- a/app/src/main/res/drawable/ic_v.xml
+++ b/app/src/main/res/drawable/ic_v.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="200"
-    android:viewportWidth="200" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#170B01" android:fillType="evenOdd"
+<vector android:height="20dp" android:viewportHeight="200"
+    android:viewportWidth="200" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#170B01" android:fillType="nonZero"
         android:pathData="M100,100m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
-        android:pathData="M135.348,54C133.795,53.98 132.394,54.932 131.842,56.385L99.48,132.269L67.119,56.385C66.541,54.973 65.156,54.061 63.631,54.087C62.392,54.11 61.247,54.752 60.58,55.797C59.914,56.842 59.815,58.151 60.317,59.285L96.079,143.141C96.662,144.502 98,145.384 99.48,145.384C100.96,145.384 102.298,144.502 102.881,143.141L138.643,59.285C139.183,58.146 139.106,56.811 138.44,55.742C137.773,54.673 136.608,54.017 135.348,54Z"
+        android:pathData="M136.505,53C134.907,52.979 133.466,53.959 132.898,55.453L99.61,133.509L66.323,55.453C65.728,54.001 64.304,53.063 62.735,53.09C61.46,53.113 60.282,53.774 59.597,54.849C58.911,55.924 58.81,57.27 59.326,58.436L96.112,144.693C96.712,146.092 98.088,147 99.61,147C101.133,147 102.509,146.092 103.109,144.693L139.895,58.436C140.45,57.265 140.371,55.892 139.685,54.792C138.999,53.692 137.801,53.017 136.505,53Z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
