--- a/app/src/main/res/drawable/ic_y.xml
+++ b/app/src/main/res/drawable/ic_y.xml
@@ -1,9 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="200"
-    android:viewportWidth="200" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#778F5B" android:fillType="evenOdd"
+<vector android:height="20dp" android:viewportHeight="200"
+    android:viewportWidth="200" android:width="20dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#778F5B" android:fillType="nonZero"
         android:pathData="M100,100m-100,0a100,100 0,1 1,200 0a100,100 0,1 1,-200 0"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
     <path android:fillColor="#FFFFFF" android:fillType="nonZero"
-        android:pathData="M134.847,49C133.451,48.974 132.132,49.638 131.322,50.774L99.481,94.077L67.641,50.774C66.745,49.556 65.268,48.908 63.766,49.075C62.263,49.241 60.964,50.196 60.356,51.581C59.749,52.965 59.927,54.568 60.822,55.786L95.251,102.608L95.251,146.34C95.23,147.866 96.031,149.285 97.349,150.054C98.666,150.823 100.296,150.823 101.614,150.054C102.931,149.285 103.733,147.866 103.711,146.34L103.711,102.608L138.141,55.786C139.103,54.517 139.271,52.816 138.575,51.383C137.88,49.951 136.439,49.03 134.847,49Z"
+        android:pathData="M132.227,52.999C130.936,52.976 129.716,53.59 128.967,54.641L99.517,94.692L70.067,54.641C69.239,53.514 67.873,52.915 66.483,53.069C65.093,53.223 63.891,54.107 63.33,55.387C62.768,56.667 62.932,58.15 63.76,59.277L95.604,102.583L95.604,143.031C95.584,144.442 96.326,145.755 97.544,146.466C98.763,147.177 100.27,147.177 101.489,146.466C102.708,145.755 103.449,144.442 103.429,143.031L103.429,102.583L135.273,59.277C136.163,58.103 136.318,56.529 135.675,55.204C135.032,53.879 133.699,53.028 132.227,52.999Z"
         android:strokeColor="#00000000" android:strokeWidth="1"/>
 </vector>
